[project]
name = "metaflow-kestra"
version = "0.3.1"
description = "Run Metaflow flows as Kestra workflows"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Nissan Pow", email = "nissan.pow@gmail.com" }]
keywords = ["metaflow", "kestra", "workflow", "orchestration", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "metaflow>=2.9",
    "click>=8.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/npow/metaflow-kestra"
Repository = "https://github.com/npow/metaflow-kestra"

[tool.setuptools.packages.find]
include = ["metaflow_extensions*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
markers = [
    "integration: requires external Kestra server (docker-compose)",
    "e2e: alias for integration tests requiring external Kestra server",
]
